--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,11 @@
 /* Google fonts import */
 
 /* Asterisk wildcard selector to override default styles added by the browser */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 /* General styles */
 
