Push footer down using flex styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,11 @@
 }
 
 /* General styles */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 
 /* Header */
 
@@ -19,7 +24,14 @@ header {
 
 main {
     background-color: #ffc9b9;
-}
+    /* Make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
+    /* Add margin at the top to prevent content from being covered by the header */
+    /* margin-top: 47px; */
+    /* Enable flex properties for child elements */
+    display: flex;
+    flex-direction: column;
+ }
 
 /* Footer */
 
