--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 /* Asterisk wildcard selector to override default styles added by the browser */
 * {
     padding: 0;
-    margin: 0;
+    margin; 0;
     box-sizing: border-box;
 }
 
@@ -22,8 +22,13 @@ body {
 
 header {
     background-color: #2c6e49;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    box-shadow: 0 2px 2px #153523;
+    display: flex;
 }
-
 
 /* Main content */
 
