--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,15 @@ header {
     display: flex;
 }
 
+header a {
+    text-decoration: none;
+}
+
+h1 {
+    font-family: 'Nunito', sans-serif;
+    color: #fefee3;
+}
+
 /* Main content */
 
 main {
