--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,14 @@ h1 {
     color: #fefee3;
 }
 
+#menu {
+    list-style-type: none;
+}
+
+#menu > li {
+    margin-bottom: 1em;
+}
+
 /* Main content */
 
 main {
