--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,12 @@ body {
     font-family: 'Nunito', sans-serif;
 }
 
+h1 {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 200;
+    color: #fefee3;
+}
+
 /* Header */
 
 header {
@@ -28,16 +34,13 @@ header {
     width: 100%;
     box-shadow: 0 2px 2px #153523;
     display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 header a {
     text-decoration: none;
-}
-
-h1 {
-    font-family: 'Nunito', sans-serif;
-    font-weight: 200;
-    color: #fefee3;
+    color: inherit;
 }
 
 #menu {
@@ -46,6 +49,7 @@ h1 {
 
 #menu > li {
     margin-bottom: 1em;
+    color: #fefee3;
 }
 
 /* Main content */
