--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ body {
 h1 {
     font-family: 'Nunito', sans-serif;
     font-weight: 200;
+    font-size: 150%;
     color: #fefee3;
 }
 
@@ -26,7 +27,7 @@ h1 {
 
 header {
     background-color: #2c6e49;
-    padding: 0 1rem;
+    padding: 0.5rem 1rem;
     position: fixed;
     z-index: 99;
     width: 100%;
@@ -35,6 +36,12 @@ header {
     justify-content: space-between;
     align-items: baseline;
 }
+
+/* Hamburger toggle */
+.fa-bars {
+    color: #fefee3;
+}
+
 
 header a {
     text-decoration: none;
