--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,36 @@ footer {
 
 
 /* Media query: large or landscape phones (576px and up) */
+
 /* Media query: tablets and larger (768px and up) */
+@media screen and (min-width:768px) {
+    /* Header */
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem; 
+        background-color: #2c6e49;
+    }
+
+    #menu {
+        display: flex;
+    }
+
+    #menu > li {
+        padding-left: 1rem;
+    }
+
+    .nav-toggle-label {
+        display: none;
+    }
+    #name {
+        font-size: 300%;
+        line-height: 80px;
+        margin: 0.05 0.5rem;
+    }
+}
+
 /* Media query: laptops and larger (992px and up) */
 /* Media query: large screens (1200px and up) */
