--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,4 +146,9 @@ footer {
 }
 
 /* Media query: laptops and larger (992px and up) */
+@media screen and (min-width:992px) {
+    #menu a:hover {
+    border-bottom: 1px solid #fefee3
+    }
+}
 /* Media query: large screens (1200px and up) */
