Add styles to footer icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,20 @@ footer {
     background-color: #d68c45;
 }
 
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+
+#social-networks i {
+    font-size: 150%;
+    padding: 5%;
+    color: #fefee3;
+}
+
 
 /* Media query: large or landscape phones (576px and up) */
 
