--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,18 +20,18 @@ h1 {
     font-family: 'Nunito', sans-serif;
     font-weight: 600;
     font-size: 160%;
-    color: #fefee3;
+    color: #fff6f9;
 }
 
 /* Header */
 
 header {
-    background-color: #2c6e49;
+    background-color: #494244;
     padding: 1rem 1rem;
     position: fixed;
     z-index: 99;
     width: 100%;
-    box-shadow: 0 2px 2px #153523;
+    box-shadow: 0 2px 2px #494244;
     display: flex;
     justify-content: space-between;
     align-items: baseline;
@@ -39,7 +39,7 @@ header {
 
 /* Burger toggle */
 .fa-bars {
-    color: #fefee3;
+    color: #fff6f9;
 }
 
 
@@ -55,22 +55,22 @@ header a {
 
 #menu > li {
     margin-bottom: 1em;
-    color: #fefee3;
+    color: #fff9f9;
 }
 
 .active {
-    border-bottom: 1px solid #fefee3;
+    border-bottom: 1px solid #fff6f9;
 }
 
 /* Navbar styles with dropdown toggle */
 /* Credit: Love Running Walkthrough Project */
 nav {
     position: absolute;
-    background-color: #4c956c;
+    background-color: #faa5c2;
     width: 100%;
     left: 0;
     padding: 0 1rem;
-    box-shadow: 0 2px 2px #153523;
+    box-shadow: 0 2px 2px #494244;
     display: none;
     top: 100%;
 }
@@ -91,7 +91,7 @@ nav {
 /* Main content */
 
 main {
-    background-color: #ffc9b9;
+    background-color: #fff6f9;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     /* Add margin at the top to prevent content from being covered by the header */
@@ -104,7 +104,7 @@ main {
 /* Footer */
 
 footer {
-    background-color: #d68c45;
+    background-color: #494244;
 }
 
 #social-networks {
@@ -118,7 +118,7 @@ footer {
 #social-networks i {
     font-size: 150%;
     padding: 5%;
-    color: #fefee3;
+    color: #fff6f9;
 }
 
 
@@ -133,7 +133,7 @@ footer {
         box-shadow: none;
         width: fit-content;
         padding-right: 1rem; 
-        background-color: #2c6e49;
+        background-color: #494244;
     }
 
     #menu {
@@ -163,7 +163,7 @@ footer {
 /* Media query: laptops and larger (992px and up) */
 @media screen and (min-width:992px) {
     #menu a:hover {
-    border-bottom: 1px solid #fefee3
+    border-bottom: 1px solid #fff6f9
     }
 }
 /* Media query: large screens (1200px and up) */
