--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,14 @@ main {
     flex-direction: column;
  }
 
+/* Hero section */
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url("/assets/images/hero-background.jpeg") no-repeat right center/cover;
+    position: relative;
+}
+
 /* Footer */
 
 footer {
