--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,10 +103,22 @@ main {
 
 /* Hero section */
 #hero {
-    height: 600px;
+    height: 100vh;
     width: 100%;
-    background: url("/assets/images/hero-background.jpeg") no-repeat right center/cover;
+    background: url("/assets/images/hero-background.jpg") no-repeat right center / cover;
     position: relative;
+}
+
+#cover-text {
+    font-size: 140%;
+    color: #faa5c2;
+    position: absolute;
+    top: 150px;
+    padding-left: 15px;
+}
+
+#cover-text > h2 {
+    font-size: 170%;
 }
 
 /* Footer */
@@ -165,6 +177,13 @@ footer {
     main {
          /* Push main content down to accomodate larger header */
         margin-top: 112px;
+    }
+
+    /* Hero section */
+    #cover-text {
+        font-size: 300%;
+        padding-top: 175px;
+        padding-left: 50px;
     }
 }
 
