Make top padding smaller for larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,7 @@ footer {
     /* Hero section */
     #cover-text {
         font-size: 300%;
-        padding-top: 175px;
+        padding-top: 5vh;
         padding-left: 50px;
     }
 }
