--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ header a {
 /* Credit: Love Running Walkthrough Project */
 nav {
     position: absolute;
-    background-color: #faa5c2;
+    background-color: #494244;
     width: 100%;
     left: 0;
     padding: 0 1rem;
@@ -153,7 +153,7 @@ footer {
         box-shadow: none;
         width: fit-content;
         padding-right: 1rem; 
-        background-color: #494244;
+        /* background-color: #494244; */
     }
 
     #menu {
