Add contact form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,8 +143,9 @@ main {
     max-height: 200px;
 }
 
-/* Footer */
+/* Contact page */
 
+/* Footer */
 footer {
     background-color: #494244;
 }
