--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,12 +107,11 @@ main {
     width: 100%;
     background: url("/assets/images/hero-background.jpg") no-repeat right center / cover;
     position: relative;
-    
 }
 
 #cover-text {
     font-size: 140%;
-    color: #faa5c2;
+    color: #f21860;
     position: absolute;
     top: 150px;
     padding-left: 15px;
@@ -125,7 +124,7 @@ main {
 /* About page */
 #about-heading {
     margin: 20px;
-    color: #faa5c2;
+    color: #f21860;
 }
 
 #about-text > div {
@@ -153,7 +152,7 @@ main {
 #contact-form > h2 {
     /* margin: 20px; */
     padding-bottom: 20px;
-    color: #faa5c2;
+    color: #f21860;
 }
 
 #contact-links {
@@ -164,7 +163,7 @@ main {
 #contact-links > a {
     display: block;
     text-decoration: none;
-    color: #faa5c2;
+    color: #f21860;
 }
 
 #message-heading {
