--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,7 +183,7 @@ main {
     width: 100%;
     height: 25px;
     margin: 5px 0 20px 0;
-    border: 1px solid #faa5c2;
+    border: 1px solid #fbb1ca;
     border-radius: 2px;
     padding: 0 5px;
 }
@@ -196,6 +196,10 @@ main {
 /* Footer */
 footer {
     background-color: #494244;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    z-index: 99;
 }
 
 #social-networks {
