--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,10 +133,16 @@ main {
     color: #494244;
 }
 
+#about-image {
+    /* Suggestion from freeCodeCamp */
+    display: grid;
+    place-items: center;
+}
+
 #about-image > img {
     background: url(assets/images/profile.jpeg) no-repeat top center / cover;
-    height: 60vw;
-    width: 60vw;
+    height: 50vw;
+    width: 50vw;
     margin: 20px;
     /* Makes the square into a circle */
     border-radius: 50%;
@@ -196,6 +202,7 @@ main {
 
 /* Footer */
 footer {
+ /* Fixed to bottom of screen with suggestion from freeCodeCamp */
     background-color: #494244;
     position: fixed;
     width: 100%;
