--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,15 +123,24 @@ main {
 }
 
 /* About page */
-#about-heading {
-    margin: 20px;
+#about h2 {
+    margin: 20px 0;
     color: #f21860;
 }
 
-#about-text > div {
+#about div {
     margin: 20px;
     color: #494244;
 }
+
+#about a {
+    text-decoration: none;
+    color: #f21860;
+}
+
+#about a:hover {
+    border-bottom: 1px solid #f21860
+    }
 
 #about-image {
     /* Suggestion from freeCodeCamp */
