Fix colors on contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,6 +171,10 @@ main {
     color: #f21860;
 }
 
+#contact-form h3 {
+    color: #494244;
+}
+
 #contact-links {
     color: #494244;
     padding: 10px 0;
@@ -181,6 +185,10 @@ main {
     text-decoration: none;
     color: #f21860;
 }
+
+#contact-links a:hover {
+    border-bottom: 1px solid #f21860
+    }
 
 #message-heading {
     padding: 15px 0;
@@ -205,11 +213,14 @@ main {
 }
 
 .send-button {
-    background-color: #fbb1ca;
-    color: #494244;
-    padding: 2px 10px;
+    background-color: #f21860;
+    color: #fff6f9;
+    padding: 2px 15px;
     font-family: 'Nunito', sans-serif;
-    border: 1px solid #494244;
+    font-size: 100%;
+    /* font-weight: 700; */
+    /* letter-spacing: 1px; */
+    border: none;
     box-shadow: 0 2px 2px #494244;
 }
 
