--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,10 @@ main {
     color: #f21860;
 }
 
+#about h3 {
+    color: #494244;
+}
+
 #about div {
     margin: 20px;
     color: #494244;
@@ -165,7 +169,7 @@ main {
     margin: 20px;  
 }
 
-#contact-form > h2 {
+#contact-form h2 {
     /* margin: 20px; */
     padding-bottom: 20px;
     color: #f21860;
@@ -221,6 +225,10 @@ main {
     border: none;
     border-radius: 5px;
     box-shadow: 0 2px 2px #494244;
+}
+
+.send-button:hover {
+    background-color: #494244;
 }
 
 /* Footer */
