--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,6 @@ main {
 }
 
 /* Contact page */
-
 #contact-form {
     margin: 20px;  
 }
@@ -183,6 +182,7 @@ main {
     display: block;
     text-decoration: none;
     color: #f21860;
+    width: fit-content;
 }
 
 #message-heading {
@@ -260,8 +260,7 @@ footer {
         position: relative;
         box-shadow: none;
         width: fit-content;
-        padding-right: 1rem; 
-        /* background-color: #494244; */
+        padding-right: 1rem;
     }
 
     #menu {
@@ -283,7 +282,7 @@ footer {
 
     /* Main content */
     main {
-         /* Push main content down to accomodate larger header */
+    /* Push main content down to accomodate larger header */
         margin-top: 112px;
     }
 
