--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,20 +124,22 @@ main {
 
 /* About page */
 #about h2 {
-    margin: 20px 0;
+    margin: 30px 20px 20px;
     color: #f21860;
 }
 
 #about h3 {
+    margin: 30px 20px 20px;
     color: #494244;
 }
 
-#about div {
-    margin: 20px;
+.about-text > div {
+    margin: 10px 20px;
     color: #494244;
 }
 
 #about a {
+    margin: 10px 20px;
     text-decoration: none;
     color: #f21860;
 }
