Add drop shadow to right edge of submit button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,7 +223,7 @@ input {
     font-size: 100%;
     border: none;
     border-radius: 5px;
-    box-shadow: 0 2px 2px #494244;
+    box-shadow: 2px 2px 2px #494244;
 }
 
 /* Footer */
