--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ header {
     align-items: baseline;
 }
 
+/* For this Nav bar and toggle, I used code from the Love Running Walkthrough Project */
 /* Burger toggle */
 .fa-bars {
     color: #fff6f9;
@@ -61,7 +62,6 @@ header a {
 }
 
 /* Nav bar styles with dropdown toggle */
-/* For this Nav bar and toggle, I used code from the Love Running Walkthrough Project */
 nav {
     position: absolute;
     background-color: #494244;
@@ -87,7 +87,6 @@ nav {
 }
 
 /* Main content */
-
 main {
     background-color: #fff6f9;
     /* Make main element take up any surplus space to push footer down */
@@ -104,7 +103,7 @@ main {
 #hero {
     height: 85vh;
     width: 100%;
-    background: url("/assets/images/hero-background.jpg") no-repeat right center / cover;
+    background: url("../images/hero-background.jpg") no-repeat right center / cover;
     position: relative;
 }
 
@@ -149,7 +148,7 @@ main {
 }
 
 #about-image img {
-    background: url(assets/images/profile.jpeg) no-repeat top center / cover;
+    background: url(../images/profile.jpeg) no-repeat top center / cover;
     height: 50vw;
     width: 50vw;
     margin: 20px;
@@ -159,6 +158,7 @@ main {
     max-height: 200px;
 }
 
+/* For this contact form, I used code from the Love Running Walkthrough Project */
 /* Contact page */
 #contact-form {
     margin: 20px;
@@ -185,7 +185,7 @@ main {
     text-decoration: none;
     color: #f21860;
     width: fit-content;
-    padding: 3px 0;
+    margin: 5px 0;
 }
 
 #message-heading {
@@ -206,7 +206,7 @@ main {
     padding: 0 5px;
 }
 
-input {
+input, textarea {
     outline: none;
 }
 
