Remove CV link and add and style career path content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,10 @@ main {
     color: #f21860;
 }
 
+#about span {
+    font-style: italic;
+}
+
 #about-image {
 /* Suggestion from freeCodeCamp */
     /* display: grid;
