--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,6 @@ main {
 }
 
 #contact-links > a {
-    /* display: block; */
     text-decoration: none;
     color: #f21860;
     width: fit-content;
@@ -234,6 +233,30 @@ input, textarea {
     /* Suggestion from MakeUseOf */
     box-shadow: 2px 2px 2px #494244;
 }
+
+/* Success page */
+
+#success {
+    text-align: center;
+    display: inline-block;
+}
+
+#success h2 {
+    margin: 30px 20px 20px;
+    color: #f21860;
+}
+
+#success p {
+    padding-bottom: 50px;
+
+}
+
+#success a {
+    text-decoration: none;
+    color: #f21860;
+}
+
+/* 404 page */
 
 /* Footer */
 footer {
