--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 /* Asterisk wildcard selector to override default styles added by the browser */
+/* From Love Running Walkthrough Project */
 * {
     padding: 0;
     margin: 0;
@@ -9,6 +10,7 @@
 }
 
 /* General styles */
+/* From Love Running Walkthrough Project */
 body {
     min-height: 100vh;
     display: flex;
@@ -24,6 +26,7 @@ h1 {
 }
 
 /* Header */
+/* Inspired by Love Running Walkthrough Project */
 header {
     background-color: #494244;
     padding: 1rem 1rem;
@@ -87,6 +90,7 @@ nav {
 }
 
 /* Main content */
+/* Inspired by Love Running Walkthrough Project */
 main {
     background-color: #fff6f9;
     /* Make main element take up any surplus space to push footer down */
@@ -151,6 +155,7 @@ main {
 }
 
 #about-image img {
+    /* From Love Running Walkthrough Project */
     background: url(../images/profile.jpeg) no-repeat top center / cover;
     height: 50vw;
     width: 50vw;
@@ -274,6 +279,7 @@ input, textarea {
 }
 
 /* Footer */
+/* Inspired by Love Running Walkthrough Project */
 footer {
  /* Fixed to bottom of screen with suggestion from freeCodeCamp */
     background-color: #494244;
@@ -298,6 +304,7 @@ footer {
 }
 
 /* Media query: tablets and larger (768px and up) */
+/* From Love Running Walkthrough Project */
 @media screen and (min-width:768px) {
     /* Header */
     nav {
@@ -354,6 +361,7 @@ footer {
 }
 
 /* Media query: laptops and larger (992px and up) */
+/* From Love Running Walkthrough Project */
 @media screen and (min-width:992px) {
     #menu a:hover {
     border-bottom: 1px solid #fff6f9
